--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?lgntz#1" target="_blank">首页</a> | <a href="https://d1kgsi70b35buf.cloudfront.net/1?qfxwbid" target="_blank">动态网</a> | <a href="https://d29mno3lcgt6u3.cloudfront.net/2?ntpsjx" target="_blank">大纪元</a> | <a href="https://d2cdd2sap6vl0o.cloudfront.net/4?kuugvmkq" target="_blank">看中国</a> | <a href="https://d3dbj8b4dt94o2.cloudfront.net/pHh5q?jqobu" target="_blank">新生网</a> | <a href="https://dlvlk7o3qgp9v.cloudfront.net/tktpt?asdnsd" target="_blank">阿波罗网</a> | <a href="https://db1uzmukbk5lb.cloudfront.net/Mjpvu?wdniehc" target="_blank">干净世界</a> | <a href="https://d3qwx9e7uaergm.cloudfront.net/10?olpxcsc" target="_blank">退党服务</a> | <a href="https://d29mno3lcgt6u3.cloudfront.net/Rffqf?qmnzxjit" target="_blank">明慧广播</a> | <a href="https://d265ujbtchne9r.cloudfront.net/nw9Vn?clmcfpaf" target="_blank">传奇时代</a> | <a href="https://d3d2r098q79b5l.cloudfront.net/AF9AG?fqzvtbh" target="_blank">新境界影视</a> | <a href="https://d2p9r31ubb8t81.cloudfront.net/zqMQA?fvenvm" target="_blank">文昭谈论</a> | <a href="https://d3bo5docy69ast.cloudfront.net/7?owcdejmd" target="_blank">明慧</a></p><p><a href="https://d1t2us6hq0fx1u.cloudfront.net/9?ichnz" target="_blank">大法</a> | <a href="https://d35iuueyr80mg8.cloudfront.net/3?qenvcfdbt" target="_blank">新唐人</a> | <a href="https://d2r9hn1obbkp2q.cloudfront.net/obAhT?iuwgtnafo" target="_blank">人民报</a> | <a href="https://d124e4v75n9sum.cloudfront.net/xXNHu?mckhzyn" target="_blank">放光明</a> | <a href="https://d3frzobj0kj0md.cloudfront.net/5?xcjzrj" target="_blank">新纪元</a> | <a href="https://d348xnvyypk4sr.cloudfront.net/6?sjcroens" target="_blank">希望之声</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/11?krwdtter" target="_blank">无界网络</a> | <a href="https://dh48pl2d5tlkv.cloudfront.net/Pueji?wkpct" target="_blank">追查国际</a> | <a href="https://d23a1u4ljgwmvy.cloudfront.net/16?qgsdlddal" target="_blank">明慧之窗</a> | <a href="https://d3myewunzonann.cloudfront.net/LdvzZ?znunusw" target="_blank">细语人生</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/fBn3r?ylgooiz" target="_blank">新世纪影视</a> | <a href="https://d200ccn4ewjn2r.cloudfront.net/PUWMb?dfwbsrazg" target="_blank">江峰时刻</a> | <a href="https://d26c5rnrr5nvsd.cloudfront.net/8?jxpcq" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?aciqkg#1" target="_blank">首页</a> | <a href="https://d337p4rc38c0de.cloudfront.net/1?idkgvhf" target="_blank">动态网</a> | <a href="https://dmepc9x6zy689.cloudfront.net/2?rmtkckmnc" target="_blank">大纪元</a> | <a href="https://dhltq9qxjnmw2.cloudfront.net/4?itgxjpaa" target="_blank">看中国</a> | <a href="https://dicfdkfbqptcm.cloudfront.net/pHh5q?zdhjmagor" target="_blank">新生网</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/tktpt?owfgsy" target="_blank">阿波罗网</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/Mjpvu?tqfcjmp" target="_blank">干净世界</a> | <a href="https://d324e5bfxb7dri.cloudfront.net/10?okfpsyb" target="_blank">退党服务</a> | <a href="https://d22qnxkzs9qeoh.cloudfront.net/Rffqf?nfqxqlqhw" target="_blank">明慧广播</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/nw9Vn?lcjbc" target="_blank">传奇时代</a> | <a href="https://d1lulvfep8g527.cloudfront.net/AF9AG?vszsifgbh" target="_blank">新境界影视</a> | <a href="https://d3sh8rhxyvin24.cloudfront.net/zqMQA?scbobbaqd" target="_blank">文昭谈论</a> | <a href="https://djwddd4nnr0na.cloudfront.net/7?mwafv" target="_blank">明慧</a></p><p><a href="https://dlph7fabhsbfp.cloudfront.net/9?chnwwy" target="_blank">大法</a> | <a href="https://dfu0th2rj4x8t.cloudfront.net/3?ngksklbw" target="_blank">新唐人</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/obAhT?egsjd" target="_blank">人民报</a> | <a href="https://d324e5bfxb7dri.cloudfront.net/xXNHu?nnkak" target="_blank">放光明</a> | <a href="https://d3v04vdnqz6gui.cloudfront.net/5?kecjxwags" target="_blank">新纪元</a> | <a href="https://d2a8dyhoj0w562.cloudfront.net/6?doeaxv" target="_blank">希望之声</a> | <a href="https://d2r9hn1obbkp2q.cloudfront.net/11?xzibqgomu" target="_blank">无界网络</a> | <a href="https://d3qwx9e7uaergm.cloudfront.net/Pueji?gnzqytrq" target="_blank">追查国际</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/16?didcxud" target="_blank">明慧之窗</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/LdvzZ?jjnlkojd" target="_blank">细语人生</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/fBn3r?effymtvgw" target="_blank">新世纪影视</a> | <a href="https://d2p9r31ubb8t81.cloudfront.net/PUWMb?dlspxboea" target="_blank">江峰时刻</a> | <a href="https://d78f5frq5siq8.cloudfront.net/8?haqdbvn" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290623-Untitled-design-13-320x200.jpg"><p align="center">【直播】川普遇刺最新进展 记者连线</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1" title="【直播】川普遇刺最新进展 记者连线""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290623-Untitled-design-13-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287991.md#1" title="Costco礼品卡很超值 但四缺陷易被忽略""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/12/id13422008-shutterstock_1320536255-320x200.jpg">&nbsp;</a>
@@ -13,16 +13,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290078.md#1" title="美第六代战机如虎添翼 XQ-67A首飞曝光""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290089-8275788-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290069.md#1" title="【菁英论坛】外逃厅官爆 退休官员逾半被抓""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290123-1200-x-800-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290663.md#1">美联储降息 房价恐怕仍不会下降</a><br>
-:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290615.md#1">川普遇袭后 纽约警局加强川普大厦安全戒备</a><br>
-:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289716.md#1">CECC幕僚长：阻中共活摘 确保美企不被利用</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287884.md#1">北上消费致澳门百业萧条 香港或步后尘</a><br>
+:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290035.md#1">个人理财：买房时应特别注意的6个危险信号</a><br>
+:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290619.md#1">美司法部长：我们不会容忍任何形式的暴力</a><br>
+:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290652.md#1">民主党参议员：川普遭暗杀是美国黑暗的一天</a><br>
+:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290663.md#1">美联储降息 房价恐怕仍不会下降</a><br>
+:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290615.md#1">川普遇袭后 纽约警局加强川普大厦安全戒备</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289716.md#1">CECC幕僚长：阻中共活摘 确保美企不被利用</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287884.md#1">北上消费致澳门百业萧条 香港或步后尘</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1">【直播】川普遇刺最新进展 记者连线</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290397.md#1">组图：“美丽的美利坚”庆典 纽约上州登场</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290106.md#1">【时事军事】共军真要去欧洲打仗？</a><br>
-:clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287991.md#1">Costco礼品卡很超值 但四缺陷易被忽略</a><br>
-:clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1">建设银行与广发银行两名分行副行长同日落马</a><br>
-:clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290116.md#1">新获知447名法轮功学员遭中共非法判刑</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289354.md#1">中共太子党动向密集曝光 胡耀邦孙女任新职</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289299.md#1">中国6月进出口数据现警讯 贸易冲突或加剧</a><br>
@@ -114,7 +114,7 @@
 ```diff
 !退出中共党、团、队总人数:
 
-!共 433,186,381 人
+!共 433,186,475 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289716.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14288959-LDB2433-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289716.md#1">CECC幕僚长：阻中共活摘 确保美企不被利用</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289988.md#1">租客朋友暂住未报官 深圳房东遭罚 网民吃惊</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289763.md#1">芬兰法轮功7·20游行反迫害 民众签名支持</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289703.md#1">追查国际主席：中共活摘器官是毁灭人类的罪恶</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289700.md#1">退党中心主席：退党是解体中共最和平之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289642.md#1">走线华人参加法轮功大游行：我要忏悔</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290160.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290161-0871803e3e4904d28f2888df24f481ef-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290160.md#1">“美妆一哥”骆王宇面临退款1.5亿元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290231.md#1">中共官方承认汽车市场无序竞争 冲击产业链</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289629.md#1">华裔CEO：美国在AI竞争中领先中共</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289836.md#1">大陆多地城投公司商业票据违约</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289709.md#1">金华首富女婿叹大陆前沿企业也内卷</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289644.md#1">中国电商价格战激烈 卖家难以维持生计</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1"><img width="320" align ="left" src="https://cn.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1">建设银行与广发银行两名分行副行长同日落马</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289639.md#1">【环球直击】25年风雨路 法轮功学员华府烛光夜悼</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289640.md#1">【全球新闻】新冠卷土重来 中共官方承认多人亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289641.md#1">【晚间新闻】拜登警告中共 助俄将付出代价</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290013.md#1">台海巡队强化淡水河防务 遏止中共快艇闯入</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14286366-GettyImages-2157553384-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1">中国南方未来一周持续高温 下周一正式入伏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289769.md#1">北京突降暴雨 一秒白天变黑夜 连发六预警</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289363.md#1">内蒙古额尔古纳市载游客车辆侧翻 酿3死4伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288993.md#1">女生北大毕业后 又考入上海交大 引发关注</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288843.md#1">谐星傅子明猝逝 沪语歌《做人难》曾爆红上海滩</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288365.md#1">重庆河水倒灌村民被困 三峡水库今年首度泄洪</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290139.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290228-7296066ff825d0fad4e91ba4e2c7f6d4-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290139.md#1">大陆男子用万元硬币还款 被法院罚2000元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290254.md#1">三退声明精选（2024/07/13）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290033.md#1">辽宁一市监局职员未到午休全离岗 市民要问责</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289996.md#1">油罐车混装事件引恐慌 大陆榨油机销量翻4倍</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289987.md#1">浙江男子持玩具枪打劫金店 店员惊恐尖叫</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289951.md#1">中共院士终身制没了 引发热议</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289980-Unknown-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1">河南一高中办“编导补习班” 遭质疑捞钱</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288730.md#1">深圳龙岗教育局暑期招志愿教师照看官员子女？</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286971.md#1">广西福建相继出现“龙吸水”奇观</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286471.md#1">天津一新规打破教师“铁饭碗” 引发争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286454.md#1">“人死后指纹还能解锁手机吗 ”引发热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283647.md#1">港大经管学院查获约30名中国籍学生假学历入学</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284768.md#1">前高官：中共恐怖治国假话盛行 官员难善终</a><br>
